[gd_scene load_steps=4 format=3 uid="uid://b1a286d7vlunb"]

[ext_resource type="Script" path="res://laser_destroyer.gd" id="1_spdu4"]
[ext_resource type="PackedScene" uid="uid://chm78qy27yofc" path="res://laser_beam.tscn" id="2_jkja8"]
[ext_resource type="Texture2D" uid="uid://c3bg2gftfwtfn" path="res://assets/DzJMF3 (1)-Photoroom фвцфвфцвц(1)(3).png" id="2_ktoxy"]

[node name="laser_destroyer" type="Node2D"]
script = ExtResource("1_spdu4")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-3, 1)
scale = Vector2(0.18875, 0.231)
texture = ExtResource("2_ktoxy")
region_enabled = true
region_rect = Rect2(55, 370, 346, 42)

[node name="laser_beam" parent="." instance=ExtResource("2_jkja8")]
position = Vector2(29, 1)
scale = Vector2(1.84, 0.79128)
damage = 450
color = Color(0.663257, 0.769788, 1, 1)
damage_interval = 0.8

[node name="shootSpeedTimer" type="Timer" parent="."]

[connection signal="timeout" from="shootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
